--- a/docker-compose/kafka-kafdrop/docker-compose.yaml
+++ b/docker-compose/kafka-kafdrop/docker-compose.yaml
@@ -20,6 +20,11 @@ services:
       KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
       KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+       KAFKA_MESSAGE_MAX_BYTES: 9242880             # 5MB
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 9242880       # 5MB
+
+      # Producer-side max request size
+      KAFKA_MAX_REQUEST_SIZE: 9242880 
       KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
       KAFKA_RESTART_ATTEMPTS: "10"
       KAFKA_RESTART_DELAY: "5"
